<resources>
    <string name="app_name">Mlib</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">主页</string>
    <string name="menu_gallery">设置</string>
    <string name="menu_slideshow">我的</string>
    <string name="page_title">lmio</string>
    <string name="search">" 搜索"</string>
    <string name="content_description_search">搜索</string>
    <string name="more">更多</string>
    <string name="content_description_more">更多</string>
    <string name="content_description_message">消息</string>
    <string name="message">消息</string>
    <string name="title_activity_login">AuthActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">登录</string>
    <string name="enter_phone_number">输入用户名</string>
    <string name="enter_password">请输入密码</string>
    <string name="remember_me">记住密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="create_account">注册账号</string>
    <string name="back">返回</string>
    <string name="re_password">请再次输入密码</string>
    <string name="enter_email">请输入你的电子邮件地址</string>
    <string name="get_validCode">获取验证码</string>
    <string name="enter_validCode">请输入验证码</string>
    <string name="register">注册</string>
    <string name="return_login">返回登录界面</string>
    <string name="reset">立即重置密码</string>
    <string name="next">下一步</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_title">设置项标题</string>
    <string name="search_hint">搜索</string>
    <string name="username">用户名</string>
    <string name="email">邮箱</string>
    <string name="Introduction">简介</string>
</resources>