<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="80dp"
    tools:context=".ui.auth.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone_number"
        android:textColorHint="@color/black"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:errorEnabled="true"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/ic_person"
        app:startIconTint="@color/black">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@color/black"
            android:textCursorDrawable="@null" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        app:errorEnabled="true"
        android:hint="@string/enter_password"
        android:textColorHint="@color/black"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/black">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/black" />


    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
        android:id="@+id/forget_password_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="10dp">


        <CheckBox
            android:id="@+id/remember_me"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:buttonTint="@color/black"
            android:text="@string/remember_me"
            android:textColor="@color/black" />


        <Button
            android:id="@+id/to_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="3dp"
            android:background="#00000000"
            android:textColor="@color/black"
            android:text="@string/forget_password"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>


    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_password_block"
        android:layout_marginTop="19dp"
        android:background="@color/black"
        android:text="@string/login"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#00000000"
        android:textColor="@color/black"
        android:text="@string/create_account" />

</RelativeLayout>