<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="80dp"
    tools:context=".ui.auth.ForgetFragment"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/valid_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:textColorHint="@color/black"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/valid_email_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/validCode"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:minWidth="150dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/enter_validCode"
                android:textColorHint="@color/black"
                app:counterEnabled="true"
                app:counterMaxLength="6"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/get_code"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:background="@color/indigo_light"
                android:textColor="@color/white"
                android:text="@string/get_validCode"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>
        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/valid_email_block"
            android:layout_marginTop="19dp"
            android:background="@color/black"
            android:text="@string/next"
            android:textColor="@color/white" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/reset_block"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:textColorHint="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/black">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/black" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/re_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:hint="@string/re_password"
            android:textColorHint="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/black">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/re_password"
            android:layout_marginTop="19dp"
            android:background="@color/black"
            android:text="@string/reset"
            android:textColor="@color/white" />
    </RelativeLayout>


    <Button
        android:id="@+id/to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="#00000000"
        android:textColor="@color/black"
        android:text="@string/return_login" />
</LinearLayout>